# controller

./: .env.example  .gitignore  .nvim.lua  Cargo.toml  Makefile.toml  README.md  build.rs  cspell.json  diagram.json  rust-toolchain.toml  wokwi.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/c6/: Cargo.toml  README.md
crates/c6/.cargo/: config.toml
crates/c6/src/: display.rs  lib.rs  link.rs  peer.rs  post.rs  radio.rs  sdcard.rs  self_test.rs
crates/comm/: Cargo.toml  README.md  rust-toolchain.toml
crates/comm/.cargo/: config.toml
crates/comm/src/: dispatch.rs  keyring.rs  lib.rs  link.rs  loopback.rs  metrics.rs  peer_registry.rs  prelude.rs  replay.rs  selector.rs
crates/comm/src/notifier/: builder.rs  mod.rs  nonce.rs  signals.rs
crates/comm/src/receiver/: builder.rs  mod.rs
crates/comm/tests/: integration.rs
crates/controller/: Cargo.toml  README.md  rust-toolchain.toml
crates/controller/.cargo/: config.toml
crates/controller/src/: config.rs  lib.rs  metrics.rs  protocol.rs  self_test.rs
crates/controller/src/hal/: analog.rs  battery.rs  button.rs  joystick.rs  led_effects.rs  mod.rs  persist.rs  post.rs  rng.rs  switch.rs
crates/controller/src/input/: sampler.rs
crates/controller/src/transport/: control.rs  defmt_log.rs
crates/controller/src/transport/ble_hid/: descriptor.rs  mod.rs  report.rs  service.rs
crates/controller/src/transport/esp_now/: link.rs  mod.rs
crates/controller/src/ui/: layout.rs  mod.rs  selector.rs
crates/controller/tests/: hello_test.rs
crates/dashboard/: Cargo.toml  Makefile.toml  README.md  Trunk.toml  index.html  rust-toolchain.toml  style.css
crates/dashboard/.cargo/: config.toml
crates/dashboard/src/: app.rs  bluetooth.rs  main.rs  state.rs
crates/dashboard/src/components/: command_panel.rs  event_log.rs  gamepad_visual.rs  mod.rs  receiver_panel.rs  status_panel.rs
crates/examples/comm-hello-world/: Cargo.toml  rust-toolchain.toml
crates/examples/comm-hello-world/.cargo/: config.toml
crates/examples/comm-hello-world/src/: main.rs
crates/examples/controller-host-demo/: Cargo.toml  rust-toolchain.toml
crates/examples/controller-host-demo/.cargo/: config.toml
crates/examples/controller-host-demo/src/: main.rs
crates/examples/controller-receiver-demo/: Cargo.toml  rust-toolchain.toml
crates/examples/controller-receiver-demo/.cargo/: config.toml
crates/examples/controller-receiver-demo/src/: main.rs
crates/protocol/: CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  USAGE.md  build.rs  rust-toolchain.toml
crates/protocol/.cargo/: config.toml
crates/protocol/examples/: receiver-import-example.md
crates/protocol/src/: auth.rs  codec.rs  command.rs  config.rs  crc.rs  frame.rs  lib.rs  replay.rs  response.rs  state.rs
crates/protocol/tests/: proptest_roundtrips.rs
docs/: esp_now_controller.md  esp_now_receiver.md  protocol_air.md
scripts/: gen-secrets.sh
src/: config.rs  lib.rs  metrics.rs  peer_registry.rs  protocol.rs  self_test.rs
src/hal/: analog.rs  button.rs  joystick.rs  led.rs  led_effects.rs  persist.rs  rng.rs
src/input/: mod.rs  sampler.rs
src/transport/: control.rs  mod.rs
src/transport/ble_hid/: mod.rs  service.rs
src/transport/esp_now/: mod.rs
src/ui/: layout.rs  mod.rs  selector.rs
tests/: hello_test.rs
