[workspace]
# ============================================================
# Cargo Workspace（controller）—— 纯 virtual manifest
# ============================================================
#
# 根目录仅作为 workspace 根（不再含 [package]），所有 crate 均落在 crates/ 下：
# - crates/controller   = controller（手柄固件 crate，esp32 xtensa target）【原根 package】
# - crates/c6           = c6（ESP32-C6 接收端固件 crate，riscv32 target，与 controller 是兄弟 receiver）
# - crates/protocol     = protocol（纯协议 crate，no_std，跨 target 复用）
# - crates/comm        = comm（通信编排：Notifier / Receiver / nonce 广播等）
# - crates/dashboard    = controller-dashboard（Leptos WASM 前端调试台）
# - crates/examples/controller-host-demo     = 主机侧协议交互 demo（纯 host target，防止文档腐化）
# - crates/examples/controller-receiver-demo = 接收端状态帧订阅 demo（纯 host target，防止文档腐化）
# - crates/examples/comm-hello-world         = comm 基础使用 demo
#
# 之所以把固件搬进 crates/controller（而非保留根 package）：
# 满足 rust-skills [proj-workspace-large] 推荐的 "crates/* 各居其位" 纯 virtual 布局，
# 所有 crate 一律通过 `cargo build -p <name>` / `cargo make <task>` 操作，结构一致、易扩展。
# 固件专属的 xtensa 默认 target 已下移到 crates/controller/.cargo/config.toml，
# esp channel 也下移到 crates/controller/rust-toolchain.toml；根 rust-toolchain.toml
# 保持中性的 stable 默认，不再污染 protocol / comm / dashboard 的 host / wasm 编译。
# ============================================================
members = [
  "crates/c6",
  "crates/controller",
  "crates/protocol",
  "crates/comm",
  "crates/dashboard",
  "crates/examples/controller-host-demo",
  "crates/examples/controller-receiver-demo",
  "crates/examples/comm-hello-world",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.88"
version = "0.2.0"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

# ============================================================
# N-4：扩充 clippy 分组（rust-skills lint-deny-correctness / lint-warn-*）
# ============================================================
# 各 crate 通过 `[lints] workspace = true` 继承。因每条分组内可能包含个别
# 项目允许的 lint，采用 `priority = -1` 保留后续 `[lints.clippy.<name>] level`
# 的覆盖能力。
[workspace.lints.clippy]
correctness = {level = "deny", priority = -1}
suspicious = {level = "warn", priority = -1}
style = {level = "warn", priority = -1}
complexity = {level = "warn", priority = -1}
perf = {level = "warn", priority = -1}

# ============================================================
# 优化配置：dev/release 编译剖面（workspace 级，对全员生效）
# ============================================================
# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html

[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2 # prefer slower builds but better debugging experience
lto = 'fat'
opt-level = 's'
# 显式声明 panic 策略为 abort（而不是依赖隐式 unwind + esp-backtrace 触发 abort）：
# 1. 语义明示：整个手柄固件是 `no_std` embedded target，任何 panic 都无法安全 recover，
#    直接 abort 比"生成 unwind landing pad 然后被 panic handler 打印后 abort"更清晰
# 2. 体积/常量表收益：告诉 rustc "不需要 unwind"后，某些依赖会 elide landing pad 生成
# 3. 与 [profile.wasm-release] 的 `panic = "abort"` 声明保持一致
panic = "abort"

# ============================================================
# Dashboard 专用 release profile（WASM 极致体积优化）
# ============================================================
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = 'fat'
codegen-units = 1
panic = "abort"
strip = true
