[package]
edition.workspace = true
name = "c6"
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "c6"
path = "./src/bin/main.rs"
test = false

[[test]]
harness = false
name = "hello_test"

[lib]
test = false

[dependencies]
esp-hal = { version = "1.1.1", features = ["defmt", "esp32c6", "unstable"] }

esp-rtos = { version = "0.3.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c6",
] }

defmt = "1.1.1"
esp-bootloader-esp-idf = { version = "0.5.0", features = ["defmt", "esp32c6"] }

embassy-net = { version = "0.9.1", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
esp-alloc = { version = "0.10.0", features = ["defmt"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.2", features = ["defmt"] }
# for more networking protocol support see https://crates.io/crates/edge-net
bt-hci = "0.9.0"
embassy-executor = { version = "0.10.0", features = ["defmt"] }
embassy-time = { version = "0.5.1", features = ["defmt"] }
esp-radio = { version = "0.18.0", features = [
  "ble",
  "coex",
  "defmt",
  "esp-alloc",
  "esp-now",
  "esp32c6",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.13.1", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
trouble-host = { version = "0.7.0", features = ["gatt"] }

critical-section = "1.2.0"
static_cell = "2.1.1"

# 关掉 embed-default-secrets，强制注入真密钥；启用 defmt::Format 集成。
#
# session_nonce（K3）跨设备同步：
#   Command/Response 的 HMAC 会混入 session_nonce。接收方必须先采纳手柄广播的
#   nonce 才能验签。comm 的 receiver dispatch 现已"未认证读 NonceHello"
#   （见 comm::dispatch / protocol::peek_nonce_hello）自动同步 nonce，因此
#   **不再需要** debug-auth-bypass —— c6 现在做真实 HMAC 校验。
#   注意：真实校验要求 c6 与手柄注入**相同**的 CONTROLLER_SECRET_V1/V2
#   （embed-default-secrets 已关闭，缺失密钥会在编译期 panic）。
protocol = {path = "../protocol", default-features = false, features = ["defmt"]}

# comm 编排层：Notifier / Receiver 门面 + CommLink trait + PeerRegistry / ReplayGuard / Keyring
# 通过实现 CommLink 把 esp_now.split() 的两半适配进 comm 的双 task 拓扑
# （run_receive_loop + run_broadcast_loop），把手写的 handle_frame / handle_command / PeerCtx 全部下沉给 comm。
comm = {path = "../comm", default-features = false, features = ["defmt"]}

# LCD 驱动（ST7789 / 240x240 SPI 屏，正方形 1.3 寸屏）
mipidsi = { version = "0.10.0", default-features = false, features = ["defmt"] }
embedded-graphics = "0.8.2"
embedded-hal = "1.0.0"
embedded-hal-bus = { version = "0.3.0", features = ["defmt-03"] }

# SD 卡 (FAT16/FAT32) — 与 LCD 共用 SPI2 总线，通过 embedded-hal-bus::RefCellDevice 复用
embedded-sdmmc = { version = "0.9.0", default-features = false, features = ["defmt-log"] }

# Inter-task 通道
embassy-sync = { version = "0.8", features = ["defmt"] }
embassy-futures = "0.1.2"

[dev-dependencies]
embedded-test = { version = "0.7.1", features = [
  "defmt",
  "embassy-010",
  "external-executor",
] }
