[package]
name = "controller-dashboard"
description = "Leptos-based WebBluetooth debug dashboard for the ESP32 game controller"
license = "MIT"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "controller-dashboard"
path = "src/main.rs"

# ============================================================
# 依赖
# ============================================================
[dependencies]
# 协议 crate：启用 std（Leptos 完全在 Rust 侧操作数据结构，不需要跨语言 JSON）
protocol = {path = "../protocol", features = ["std"]}

# Leptos 0.8 CSR（浏览器端渲染）
leptos = {version = "0.8", features = ["csr"]}

# WASM 绑定
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# console.log 桥接（Rust log ↔ 浏览器 devtools）
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"

# ============================================================
# web-sys —— 只启用**稳定 API**（Bluetooth 通过手工 wasm-bindgen extern 声明）
# ============================================================
[dependencies.web-sys]
version = "0.3"
features = [
  "Navigator",
  "Window",
  "console",
  "Document",
  "Event",
  "EventTarget",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlSelectElement",
  "KeyboardEvent",
  "Performance",
]

# ============================================================
# Lint 门控（继承 workspace lints）
# ============================================================
[lints]
workspace = true
